feat(get-cards): Support more filter
